--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,42 @@
 version: '3'
 services:
+
   grafana:
     image: grafana/grafana:latest
+    environment:
+      GF_INSTALL_PLUGINS: "grafana-clock-panel.grafana-simple-json-datasource,grafana-worldmap-panel"
     ports:
       - "3000:3000"
     volumes:
       - "grafana:/var/lib/grafana/"
+    depends_on:
+      - loki
+      - prometheus
+
   loki:
     image: grafana/loki:2.0.0
     ports:
       - "3100:3100"
     volumes:
       - "loki:/loki/"
-    promtail:
-      imag: grafana/promtail:2.0.0
-      volumes:
-        - "/var/log:/var/log"
+
+  promtail:
+    image: grafana/promtail:2.0.0
+    volumes:
+      - "/var/log:/var/log"
+
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+
+  fluentd:
+    image: fluent/fluentd:latest
+    ports:
+      - "24224:24224"
+      - "24224:24224/udp"
+    depends_on:
+      - loki
 
 volumes:
   loki:
